--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: objective-c
 osx_image: xcode8.3
-xcode_project: Xcode/OSIA.xcodeproj
-xcode_scheme: OSIA
-script:
-  - xcodebuild build -project Xcode/OSIA.xcodeproj -scheme OSIA -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.3' | xcpretty -s
+script:  
+  - xcodebuild build -project Swift/osia.xcodeproj/ -scheme osia -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.3.1' | xcpretty -s
