--- a/.github/workflows/xcodebuild-ios15.yml
+++ b/.github/workflows/xcodebuild-ios15.yml
@@ -17,5 +17,5 @@ jobs:
 
     - name: Xcode iOS build
       run: |
-        cd Xcode/
+        cd Swift/
         xcodebuild clean build -scheme osia -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0'
