--- a/.github/workflows/xcodebuild-ios14.yml
+++ b/.github/workflows/xcodebuild-ios14.yml
@@ -1,16 +1,16 @@
-name: Xcode build
+name: Xcode build iOS 14
 
 on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: macOS-latest
+    runs-on: macos-11
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_11.4.app
+      run: sudo xcode-select -switch /Applications/Xcode_12.4.app
 
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
@@ -18,4 +18,4 @@ jobs:
     - name: Xcode build
       run: |
         cd Swift/
-        xcodebuild clean build -scheme osia -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.4.1'
+        xcodebuild clean build -scheme osia -destination 'platform=iOS Simulator,name=iPhone 12,OS=14.4'
